# prescient-sweeps

./: README.md  pyproject.toml
.github/workflows/: checks.yml
dispatches_prescient_sweeps/: base_prescient_options.py  prescient_options_10_reserves_1000_shortfall.py  prescient_options_10_reserves_500_shortfall.py  prescient_options_15_reserves_1000_shortfall.py  prescient_options_15_reserves_500_shortfall.py
dispatches_prescient_sweeps/fossil_case/: fossil_sweep_10_1000.py  fossil_sweep_10_500.py  fossil_sweep_15_500.py  parameters.py  summarize_fossil_sweep.py
dispatches_prescient_sweeps/fossil_case_revised_fixed_commitment/: parameters.py  summarize_fossil_sweep.py
dispatches_prescient_sweeps/nuclear_case/: nuclear_sweep_10_500.py  nuclear_sweep_15_1000.py  parameters.py  summarize_nuclear_sweep.py
dispatches_prescient_sweeps/nuclear_case_w_fuel_cell/: nuclear_sweep_10_1000.py  nuclear_sweep_15_500.py  parameters.py
dispatches_prescient_sweeps/renewables_case_PV_storage/: parameters.py  summarize_parameter_sweep.py
dispatches_prescient_sweeps/renewables_case_PV_storage_from_grid/: parameters.py  summarize_parameter_sweep.py
dispatches_prescient_sweeps/renewables_case_Wind_H2/: parameter_sweep_15_1000.py  parameters.py  summarize_parameter_sweep.py
dispatches_prescient_sweeps/renewables_case_Wind_H2_from_grid/: parameters.py  summarize_parameter_sweep.py
dispatches_prescient_sweeps/tests/: test_utils.py
