[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "dispatches-prescient-sweeps" 
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">= 3.8"
dependencies = [
]
dynamic = ["version"]
